--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "Validate_IT": "./"
+            "Validate": "./"
         }
     },
     "description": "Validation class for Italy",
